[build-system]
requires = [
  "setuptools~=68.0",
  "wheel~=0.41.1",
  "discord.py~=2.3.2",
  "piccolo[postgres]~=0.119.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "red-postgres"
version = "0.1.7"
authors = [{ name = "Vertyco" }]
description = "Piccolo Postgres integration for Red"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)",
  "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/vertyco/red-postgres"
"Bug Tracker" = "https://github.com/vertyco/red-postgres/issues"

[tool.ruff]
# Enable Pyflakes `E` and `F` codes by default.
select = ["E", "F"]
ignore = ["E501"]

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["A", "B", "C", "D", "E", "F"]
unfixable = []

# Exclude a variety of commonly ignored directories.
exclude = [
  ".md",
  "locales/",
  "tests/",
  "defaults.py",
  ".idea",
  ".bzr",
  ".direnv",
  ".eggs",
  ".git",
  ".hg",
  ".mypy_cache",
  ".nox",
  ".pants.d",
  ".ruff_cache",
  ".svn",
  ".tox",
  ".venv",
  "__pypackages__",
  "_build",
  "buck-out",
  "build",
  "dist",
  "node_modules",
  "venv",
]
per-file-ignores = {}

line-length = 88

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

target-version = "py311"

[tool.ruff.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10
